# vipe

./: .clang-format  .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  run.py  setup.py
configs/: default.yaml
configs/pipeline/: default.yaml  no_vda.yaml  static_vda.yaml
configs/slam/: default.yaml
configs/streams/: raw_mp4_stream.yaml
csrc/: bind.cpp
csrc/corr_ext/: correlation.cpp  correlation_cuda_kernel.cu  correlation_sampler.cpp
csrc/droid_net_ext/: altcorr_kernel.cu  correlation_kernels.cu  droid.cpp
csrc/grounding_dino_ext/: ms_deform_attn_cuda.cu  ms_deform_attn_cuda.h  ms_deform_im2col_cuda.cuh  vision.cpp
csrc/lietorch_ext/: common.h  dispatch.h  lietorch.cpp  lietorch_cpu.cpp  lietorch_cpu.h  lietorch_gpu.cu  lietorch_gpu.h  rxso3.h  se3.h  sim3.h  so3.h
csrc/scatter_ext/: scatter.cpp
csrc/scatter_ext/cuda/: atomics.cuh  reducer.cuh  scatter_cuda.cu  scatter_cuda.h  utils.cuh
csrc/slam_ext/: geom_kernels.cu  slam.cpp
csrc/utils_ext/: cuda_kdtree.cu  cuda_kdtree.cuh  knn.cu  platform.h  utils_bind.cpp
envs/: base-cu118.yml  base.yml  requirements-cu118.in  requirements.in  requirements.txt
vipe/: __init__.py
vipe/cli/: main.py
vipe/ext/: __init__.py  scatter.py  specs.py  xformers.py
vipe/ext/corr/: __init__.py  (+1 more)
vipe/pipeline/: __init__.py  default.py  processors.py
vipe/slam/: interface.py  system.py
vipe/slam/ba/: kernel.py  (+2 more)
vipe/streams/: base.py  raw_mp4_stream.py
vipe/utils/: cameras.py  depth.py  geometry.py  io.py  logging.py  misc.py  morph.py  viser.py  visualization.py
(+127 files in other folders)
